<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.psm</groupId>
	<artifactId>daemon-end</artifactId>
	<version>1.1.1</version>
<!--	<packaging>pom</packaging> &lt;!&ndash; 聚合項目打包方式 &ndash;&gt;-->
	<name>daemon-end</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>

	<properties>
		<java.version>21</java.version>
		<!--以下是依赖版本-->
		<druid.version>1.2.20</druid.version>
		<mybatisPlus.version>3.5.7</mybatisPlus.version>
		<mybatisPlusJoin.version>1.5.2</mybatisPlusJoin.version>
		<mybatisPlusExt.version>3.5.8-EXT722</mybatisPlusExt.version>
		<redssion.version>3.38.1</redssion.version>
		<fastjson2.version>2.0.52</fastjson2.version>
		<jjwt.version>0.12.3</jjwt.version>
		<commonsText.version>1.12.0</commonsText.version>
		<mapstruct.version>1.5.5.Final</mapstruct.version>
		<hutool.version>5.8.25</hutool.version>
		<!--以下是阿里云oss依赖其他依赖-->
		<aliyunOss.version>3.17.4</aliyunOss.version>
		<jaxb-api.version>2.3.1</jaxb-api.version>
		<activation.version>1.1.1</activation.version>
		<jaxb-runtime>2.3.3</jaxb-runtime>
		<!--以上是阿里云oss依赖其他依赖-->
		<elasticSearch.version>8.16.1</elasticSearch.version>
		<tika.version>2.4.1</tika.version>
		<socketio.version>2.0.12</socketio.version>
		<tus.version>1.0.0-3.0</tus.version>
		<rocketmqClientJava.version>5.0.7</rocketmqClientJava.version>
	</properties>

	<dependencies>

		<!--web开发的起步依赖,但排除tomcat-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-tomcat</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!--添加Undertow替换tomcat-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-undertow</artifactId>
		</dependency>

		<!--postgresql驱动-->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>

		<!--druid数据库连接池起步依赖-->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid-spring-boot-3-starter</artifactId>
			<version>${druid.version}</version>
		</dependency>

		<!--mybatis-plus依赖和多表连接依赖-->
		<dependency>
			<groupId>com.github.yulichang</groupId>
			<artifactId>mybatis-plus-join-boot-starter</artifactId>
			<version>${mybatisPlusJoin.version}</version>
		</dependency>

		<!--mybatis-plus添加JPA特性的依赖-->
		<dependency>
			<groupId>com.tangzc</groupId>
			<artifactId>mybatis-plus-ext-spring-boot3-starter</artifactId>
			<version>${mybatisPlusExt.version}</version>
		</dependency>

		<!-- springCache多級緩存 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>

		<!--caffeine一级缓存-->
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
		</dependency>

		<!--redis起步依赖-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>

		<!--redis高级客户端，主要要来实现分布式自旋锁-->
		<dependency>
			<groupId>org.redisson</groupId>
			<artifactId>redisson-spring-boot-starter</artifactId>
			<version>${redssion.version}</version>
		</dependency>

		<!--用于用户密码加密的依赖-->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-crypto</artifactId>
		</dependency>

		<!--引入springSecurity依赖-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- Spring Security OAuth2 Client依赖 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
		</dependency>

		<!--引入fastjson2依赖-->
		<dependency>
			<groupId>com.alibaba.fastjson2</groupId>
			<artifactId>fastjson2</artifactId>
			<version>${fastjson2.version}</version>
		</dependency>

		<!--引入jjwt依赖-->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>${jjwt.version}</version>
		</dependency>

		<!--引入数据校验依赖-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!--引入文本处理以及校验依赖-->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${commonsText.version}</version>
		</dependency>

		<!--Bean构建简化-->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<!--pojo转化简化-->
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>

		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct-processor</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>

		<!--hutool工具包-->
		<dependency>
			<groupId>cn.hutool</groupId>
			<artifactId>hutool-all</artifactId>
			<version>${hutool.version}</version>
		</dependency>

		<!--阿里云oss依赖-->
		<dependency>
			<groupId>com.aliyun.oss</groupId>
			<artifactId>aliyun-sdk-oss</artifactId>
			<version>${aliyunOss.version}</version>
		</dependency>

		<!--以下是阿里云oss依赖其他依赖-->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>${jaxb-api.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>${activation.version}</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>${jaxb-runtime}</version>
		</dependency>
		<!--以上是阿里云oss依赖其他依赖-->

		<!--以下是elasticSearch依赖-->
		<dependency>
			<groupId>co.elastic.clients</groupId>
			<artifactId>elasticsearch-java</artifactId>
			<version>${elasticSearch.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.18.2</version>
		</dependency>
		<!--以上是elasticSearch依赖-->

		<!--消除Annotation Processor not configured警告-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
		</dependency>

		<!--检测多媒体文件类型依赖-->
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-core</artifactId>
			<version>${tika.version}</version>
		</dependency>

		<!--引入socket.io-->
		<dependency>
			<groupId>com.corundumstudio.socketio</groupId>
			<artifactId>netty-socketio</artifactId>
			<version>${socketio.version}</version>
		</dependency>

		<!--以下是引入日志框架-->

		<!--日志门面-->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>

		<!--使用log4j2的适配器进行绑定-->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
		</dependency>

		<!--log4j2日志门面-->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
		</dependency>

		<!--log4j2日志实现-->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
		</dependency>

		<!--以上是引入日志框架-->

		<!--以下是测试框架-->

		<!--引入junit 单元测试-->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>

		<!--引入spring test-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>

		<!--以上是测试框架-->

		<!--大文件上传插件-->
		<dependency>
			<groupId>me.desair.tus</groupId>
			<artifactId>tus-java-server</artifactId>
			<version>${tus.version}</version>
		</dependency>

		<!-- Spring Boot Starter AOP (用于支持 @Scheduled) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>

		<!-- Spring Boot Starter Quartz (可选，用于更复杂的调度) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-quartz</artifactId>
		</dependency>

		<!-- rocketmq依赖-->
		<dependency>
			<groupId>org.apache.rocketmq</groupId>
			<artifactId>rocketmq-client-java</artifactId>
			<version>${rocketmqClientJava.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>com.psm.DaemonEndApplication</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
